--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "angular-three": "^2.12.0",
+    "ngxtension": "^4.2.0",
     "rxjs": "~7.8.0",
+    "three": "^0.171.0",
+    "three-stdlib": "^2.35.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -27,6 +31,7 @@
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/three": "^0.171.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
