--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@pmndrs/cannon-worker-api": "^2.4.0",
     "angular-three": "^2.12.0",
+    "angular-three-cannon": "^2.12.0",
+    "cannon-es": "^0.20.0",
+    "cannon-es-debugger": "^1.0.0",
     "ngxtension": "^4.2.0",
     "rxjs": "~7.8.0",
     "three": "^0.171.0",
